Style: Fix navbar overflow at small desktop size

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,7 @@ $navbar-item-color: $white;
 $navbar-item-hover-background-color: $black;
 $navbar-tab-active-background-color: $black;
 $navbar-item-active-color: $white;
+$navbar-breakpoint: 1110px;
 
 $size-1: 3.5rem;
 $weight-light: 400;
